mqtt server side

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,7 +13,7 @@
         </span>
         <span fxFlex></span>
         <button md-icon-button [mdMenuTriggerFor]="themeMenu">
-            <md-icon>more_vert</md-icon>
+            <ng2-letter-avatar avatar-data='{{userName}}' ></ng2-letter-avatar>
         </button>
     </md-toolbar>
     <!--SMALL TOOLBAR-->
